--- a/src/app.css
+++ b/src/app.css
@@ -3,3 +3,11 @@
 @theme {
     --color-primary: #9013d9;
 }
+
+@layer base {
+    html, body {
+        width: 100%;
+        height: 100%;
+        margin: 0;
+    }
+}
